crates/tree-sitter-ppl/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.module_declaration,
      $.import_declaration,
      $.type_declaration,
      $.enum_declaration,
      $.function_declaration,
      $.procedure_declaration,
      $.function_definition,
      $.procedure_definition,
      $._statement,
    ),

    // ---------- Preprocessor ----------
    // Directives are written as comments so that a source using them still
    // reads as a comment to any older tool.
    define_directive: $ => prec.right(seq(
      alias(token(seq(';', ci('$DEFINE'))), ';$DEFINE'),
      field('name', $.identifier),
      optional(seq(optional('='), field('value', $._expression))),
    )),

    if_directive: $ => seq(
      alias(token(seq(';', ci('$IF'))), ';$IF'),
      field('condition', $._expression),
    ),

    elseif_directive: $ => seq(
      alias(token(seq(';', choice(ci('$ELSEIF'), ci('$ELIF')))), ';$ELSEIF'),
      field('condition', $._expression),
    ),

    else_directive: $ => alias(token(seq(';', ci('$ELSE'))), ';$ELSE'),
    endif_directive: $ => alias(token(seq(';', ci('$ENDIF'))), ';$ENDIF'),
    substitution: $ => token(seq(';#', /[A-Za-z_][A-Za-z0-9_]*/)),

    // ---------- Declarations ----------
    function_declaration: $ => seq(
      kw('DECLARE'),
      kw('FUNCTION'),
      field('name', $.identifier),
      $.parameter_list,
      field('return_type', $._type),
    ),

    procedure_declaration: $ => seq(
      kw('DECLARE'),
      kw('PROCEDURE'),
      field('name', $.identifier),
      $.parameter_list,
    ),

    function_definition: $ => seq(
      kw('FUNCTION'),
      field('name', $.identifier),
      $.parameter_list,
      field('return_type', $._type),
      field('body', repeat($._statement)),
      choice(endKw('FUNC'), endKw('FUNCTION')),
    ),

    procedure_definition: $ => seq(
      kw('PROCEDURE'),
      field('name', $.identifier),
      $.parameter_list,
      field('body', repeat($._statement)),
      choice(endKw('PROC'), endKw('PROCEDURE')),
    ),

    parameter_list: $ => seq('(', commaSep($._parameter), ')'),

    _parameter: $ => choice($.parameter, $.function_parameter, $.procedure_parameter),

    parameter: $ => seq(
      optional(kw('VAR')),
      field('type', $._type),
      field('name', $.identifier),
      optional($.dimensions),
    ),

    // A routine may be passed to a routine since 3.50.
    function_parameter: $ => seq(
      kw('FUNCTION'),
      field('name', $.identifier),
      $.parameter_list,
      field('return_type', $._type),
    ),

    procedure_parameter: $ => seq(
      kw('PROCEDURE'),
      field('name', $.identifier),
      $.parameter_list,
    ),

    _type: $ => choice($.builtin_type, alias($.identifier, $.type_identifier)),

    builtin_type: $ => choice(...BUILTIN_TYPES.map(t => kw(t))),

    // ---------- Statements ----------
    _statement: $ => choice(
      $.variable_declaration,
      $.const_declaration,
      $.assignment_statement,
      $.if_statement,
      $.if_block,
      $.while_statement,
      $.while_block,
      $.repeat_statement,
      $.loop_statement,
      $.for_statement,
      $.foreach_statement,
      $.select_statement,
      $.goto_statement,
      $.gosub_statement,
      $.on_error_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.end_statement,
      $.exit_statement,
      $.block,
      $.label,
      $.predefined_call,
      $.procedure_call,
      $.member_call,
      $._preprocessor_directive,
    ),

    variable_declaration: $ => seq(
      field('type', $._type),
      commaSep1($.variable_declarator),
    ),

    // The value has to be one the compiler can work out.
    const_declaration: $ => seq(
      kw('CONST'),
      field('type', $._type),
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    variable_declarator: $ => prec.right(seq(
      field('name', $.identifier),
      optional($.dimensions),
      optional(seq('=', field('value', choice($._expression, $.array_initializer)))),
    )),

    // 4.00 wants brackets and only warns about parentheses, which older sources still use.
    dimensions: $ => choice(
      seq('(', commaSep1($._expression), ')'),
      seq('[', commaSep1($._expression), ']'),
      // A dynamic array leaves its bounds to the runtime, which only brackets can say.
      seq('[', repeat(','), ']'),
    ),

    array_initializer: $ => seq('{', commaSep($._expression), '}'),

    assignment_statement: $ => seq(
      optional(kw('LET')),
      field('left', $._assignment_target),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=')),
      field('right', $._expression),
    ),

    // A variable may carry the name of a built-in statement, constant or type, so those
    // spellings have to be accepted on the left of an assignment as well.
    _assignment_target: $ => choice(
      $.identifier,
      alias($.builtin_statement, $.identifier),
      alias($.builtin_constant, $.identifier),
      alias($.builtin_type, $.identifier),
      $.member_access,
      $.index_expression,
      $.call_expression,
    ),
    if_statement: $ => seq(
      kw('IF'),
      field('condition', $._expression),
      field('consequence', $._statement),
    ),

    if_block: $ => seq(
      kw('IF'),
      field('condition', $._expression),
      kw('THEN'),
      field('consequence', repeat($._statement)),
      repeat($.elseif_clause),
      optional($.else_clause),
      endKw('IF'),
    ),

    elseif_clause: $ => seq(
      choice(kw('ELSEIF'), pairKw('ELSE', 'IF', 'ELSEIF')),
      field('condition', $._expression),
      optional(kw('THEN')),
      field('consequence', repeat($._statement)),
    ),

    else_clause: $ => seq(kw('ELSE'), field('body', repeat($._statement))),

    while_statement: $ => seq(
      kw('WHILE'),
      field('condition', $._expression),
      field('body', $._statement),
    ),

    while_block: $ => seq(
      kw('WHILE'),
      field('condition', $._expression),
      kw('DO'),
      field('body', repeat($._statement)),
      endKw('WHILE'),
    ),

    repeat_statement: $ => seq(
      kw('REPEAT'),
      field('body', repeat($._statement)),
      kw('UNTIL'),
      field('condition', $._expression),
    ),

    loop_statement: $ => seq(
      kw('LOOP'),
      field('body', repeat($._statement)),
      endKw('LOOP'),
    ),

    for_statement: $ => seq(
      kw('FOR'),
      field('variable', $.identifier),
      '=',
      field('start', $._expression),
      kw('TO'),
      field('end', $._expression),
      optional(seq(kw('STEP'), field('step', $._expression))),
      field('body', repeat($._statement)),
      choice(kw('NEXT'), endKw('FOR')),
      optional(prec.dynamic(1, field('variable_end', $.identifier))),
    ),

    foreach_statement: $ => seq(
      kw('FOREACH'),
      field('variable', $.identifier),
      kw('IN'),
      field('collection', $._expression),
      field('body', repeat($._statement)),
      choice(kw('NEXT'), endKw('FOREACH')),
    ),

    select_statement: $ => seq(
      kw('SELECT'),
      optional(kw('CASE')),
      field('value', $._expression),
      repeat($.case_clause),
      optional($.default_clause),
      endKw('SELECT'),
    ),

    case_clause: $ => seq(
      kw('CASE'),
      commaSep1($.case_label),
      optional(':'),
      field('body', repeat($._statement)),
    ),

    case_label: $ => prec.right(choice(
      seq($._expression, '..', $._expression),
      $._expression,
    )),

    default_clause: $ => seq(
      choice(kw('DEFAULT'), pairKw('CASE', 'ELSE', 'DEFAULT')),
      optional(':'),
      field('body', repeat($._statement)),
    ),

    goto_statement: $ => seq(kw('GOTO'), field('label', $.identifier)),
    gosub_statement: $ => seq(kw('GOSUB'), field('label', $.identifier)),

    // ON ERROR is two words, ONERROR one; both name the same statement.
    return_statement: $ => choice(
      kw('RETURN'),
      prec.dynamic(-1, seq(kw('RETURN'), field('value', $._expression))),
    ),

    break_statement: $ => kw('BREAK'),
    end_statement: $ => prec(-1, kw('END')),

    // What END was before 400 took that word for the block terminator.
    exit_statement: $ => kw('EXIT'),

    // Language version 400 made BEGIN ... END a block; before that BEGIN was a
    // pseudo label and the END below it the statement that stops a program.
    block: $ => seq(
      kw('BEGIN'),
      field('body', repeat($._statement)),
      kw('END'),
    ),

    // A label is one token, the way the compiler lexes it: no space after ':'.
    label: $ => token(seq(':', /[A-Za-z_][A-Za-z0-9_]*/)),

    predefined_call: $ => seq(
      field('name', $.builtin_statement),
      optional(commaSep1(field('argument', $._expression))),
    ),

    procedure_call: $ => seq(
      field('name', $.identifier),
      $.argument_list,
    ),

    argument_list: $ => choice(
      seq('(', commaSep(field('argument', $._expression)), ')'),
      seq('[', commaSep(field('argument', $._expression)), ']'),
    ),

    // ---------- Expressions ----------
    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression,
    ),

    // What a call, an index or a member reads from: always a value, never `-x`, which
    // the member and call precedences already imply. Saying it here keeps `+` and `-`
    // out of the tokens a statement can start with, so the condition of an unseparated
    // `IF a + b stmt` cannot end at `a`.
    _primary_expression: $ => choice(
      $.identifier,
      $.builtin_constant,
      $._name_from_keyword,
      $.constant,
      $.substitution,
      $.parenthesized_expression,
      $.call_expression,
      $.index_expression,
      $.member_access,
      $.record_literal,
    ),

    // `LANG`, `STRING` and friends name a statement or a type and a function or
    // constant at the same time. Reading one as a value is the last resort, so
    // that a statement of its own is preferred where both would parse.
    parenthesized_expression: $ => seq('(', $._expression, ')'),

    unary_expression: $ => choice(
      prec.right(PREC.UNARY, seq(
        field('operator', choice('-', '+')),
        field('operand', $._expression),
      )),
      prec.right(PREC.NOT, seq(
        field('operator', '!'),
        field('operand', $._expression),
      )),
    ),

    binary_expression: $ => {
      const table = [
        [PREC.OR, choice('||', '|')],
        [PREC.AND, choice('&&', '&')],
        [PREC.COMPARE, choice('==', '=', '!=', '<>', '><', '<=', '=<', '>=', '=>', '<', '>')],
        [PREC.ADD, choice('+', '-')],
        [PREC.MUL, choice('*', '/', '%')],
      ];
      return choice(
        ...table.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        ))),
        prec.left(PREC.POW, seq(
          field('left', $._expression),
          field('operator', '^'),
          field('right', $._expression),
        )),
      );
    },

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', $._primary_expression),
      '(',
      commaSep(field('argument', $._expression)),
      ')',
    )),

    index_expression: $ => prec(PREC.CALL, seq(
      field('array', $._primary_expression),
      '[',
      commaSep1(field('index', $._expression)),
      ']',
    )),

    // A type name may stand in expression position, naming an enum member or the one
    // value a board object has, so it is an object here as well as a declaration type.
    member_access: $ => prec(PREC.MEMBER, seq(
      field('object', choice($._primary_expression, $.builtin_type)),
      '.',
      field('member', choice($.identifier, $.builtin_constant)),
    )),

    // `Point { X = 1, Y = 2 }` builds a record without temporary assignments.
    builtin_statement: $ => token(choice(...BUILTIN_STATEMENTS.map(s => ci(s)))),

    // The built-in constants are their own token so that highlighting does not
    // need a case insensitive query predicate. Built-in functions do not need
    // one: a call is recognized by its parentheses.
    constant: $ => choice(
      $.string_literal,
      $.number_literal,
      $.money_literal,
      $.color_code,
      $.boolean_literal,
    ),

    // A doubled quote is a quote, there is no backslash escape.
    string_literal: $ => token(seq('"', repeat(choice(/[^"]/, '""')), '"')),

    number_literal: $ => token(choice(
      /\d+\.\d+/,
      /\d[0-9A-Fa-f]*[hH]/,
      /[01]+[bB]/,
      /[0-7]+[oO]/,
      /\d+[dD]/,
      /\d+/,
    )),

    money_literal: $ => token(seq('$', /\d+(\.\d+)?/)),

    color_code: $ => token(seq('@', /[xX]/, /[0-9A-Fa-f]{2}/)),

    boolean_literal: $ => choice(kw('TRUE'), kw('FALSE')),

    comment: $ => token(choice(
      seq(';', /[^$#\n][^\n]*/),
      seq(';', /\r?\n/),
      seq("'", /[^\n]*/),
    )),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});
